--- a/card.html
+++ b/card.html
@@ -8,6 +8,12 @@
  <span itemprop="jobTitle">Student</span>
  <a href="http://v-ie.uek.krakow.pl/~s188599"
 itemprop="url">http://v-ie.uek.krakow.pl/~s188599</a>
+<span itemprop="favouritePicture"><img src=images.jpg></span>">
+<ul itemprop="hobbies">
+	<li>spanie</li>
+	<li>jedzenie</li>
+	<li>przezucanie ciezarow</li>
+	</ul>
  </div>
  </body>
 </html> 
