--- a/card.html
+++ b/card.html
@@ -9,11 +9,19 @@
  <a href="http://v-ie.uek.krakow.pl/~s188599"
 itemprop="url">http://v-ie.uek.krakow.pl/~s188599</a>
 <span itemprop="favouritePicture"><img src=images.jpg></span>">
+
 <ul itemprop="hobbies">
 	<li>spanie</li>
 	<li>jedzenie</li>
 	<li>przezucanie ciezarow</li>
-	</ul>
+</ul>
+
+<ul itemprop="socialMedia">
+	<li>spanie</li>
+	<li>jedzenie</li>
+	<li>przezucanie ciezarow</li>
+</ul>
+
  </div>
  </body>
 </html> 
