--- a/card.html
+++ b/card.html
@@ -17,9 +17,9 @@ itemprop="url">http://v-ie.uek.krakow.pl/~s188599</a>
 </ul>
 
 <ul itemprop="socialMedia">
-	<li name="facebook"><a tref="https://pl-pl.facebook.com/">Facebook</a></li>
-	<li name="twitter"><a tref="https://twitter.com/?lang=pl">Twitter</a></li>
-	<li name="google+"><a tref="https://plus.google.com/">Google+</a></li>
+	<li name="facebook"><a href="https://pl-pl.facebook.com/">Facebook</a></li>
+	<li name="twitter"><a href="https://twitter.com/?lang=pl">Twitter</a></li>
+	<li name="google+"><a href="https://plus.google.com/">Google+</a></li>
 </ul>
 
  </div>
