--- a/card.html
+++ b/card.html
@@ -8,12 +8,16 @@
  <span itemprop="jobTitle">Student</span>
  <a href="http://v-ie.uek.krakow.pl/~s188599"
 itemprop="url">http://v-ie.uek.krakow.pl/~s188599</a>
+
 <span itemprop="favouritePicture"><img src=images.jpg></span>">
 
-<ul itemprop="hobbies">
-	<li>spanie</li>
-	<li>jedzenie</li>
-	<li>przezucanie ciezarow</li>
+<span itemprop="favouritePicture"><img src=images.jpg></span>">
+
+<ul itemprop="educationPath">
+	<li>Przedszkole nr 3 Bochnia</li>
+	<li>PSP1 Bochnia</li>
+	<li>1LO Bochnia</li>
+	<li>UEK Kraków</li>
 </ul>
 
 <ul itemprop="socialMedia">
